--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
     </div>
   </div>
 
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore-compat.js"></script>
+
+  <!-- Your JS -->
   <script src="script.js"></script>
 </body>
 </html>
